...
  
    var body: some View {
        VStack {
            if showInApp {
                InAppView()
            } else {
                  Text("Sign In")
                    .font(.largeTitle)
                  Form {
                    Section(header: Text("Log in info")) {
                      TextField("Email", text: $username)
                      TextField("Password", text: $password)
                    }
                  }
                    Button(action: {
                        loginAuth(un: username, pw: password)
                        self.showInApp = true
                    }) { Text("Enter")
                        .frame(minWidth:0, maxWidth:325)
                        .background(Color.orange)
                        .font(.title)
                        .foregroundColor(.white)
                        .cornerRadius(40)
                    }
...
