...
                Image(systemName: "magnifyingglass")
                Text("Search")
            }
          .tag(0)
        RentalView()
            .tabItem {
                Image(systemName: "briefcase") // or toolbox "briefcase"
                Text("Borrowing")
            }
        OtherRentalView()
            .tabItem {
                Image(systemName: "wrench") // or toolbox "briefcase"
                Text("Lending")
...
